# python_cbor_examples

./: .gitignore  README.md  json_2_cbor.py  pyproject.toml  temperature.json
python_cbor_examples/: json_2_cbor.py
